tests/NormalTests/paczka1/small_fuzzy/48938421.err
Error in line 7: w86WbfTNW A16 92,03
Error in line 3: XqLLaKN39zq S876 63,8
Error in line 11: XqLLaKN39zq A16 57,4
